add dnd menu and category

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,6 +9,16 @@
 /* Utilities */
 @import 'tailwindcss/utilities';
 
+.toggle-checkbox:checked {
+  @apply: right-0 border-green-400;
+  right: 0;
+  border-color: #68d391;
+}
+.toggle-checkbox:checked + .toggle-label {
+  @apply: bg-green-400;
+  background-color: #68d391;
+}
+
 @layer utilities {
   .bg-primary {
     @apply bg-red-600;
