complete form menu management

--- a/resources/css/components/button.css
+++ b/resources/css/components/button.css
@@ -1,5 +1,13 @@
 .btn-red {
-  @apply px-6 py-3 rounded bg-primary text-white text-sm font-bold whitespace-nowrap hover:bg-primary-darker focus:bg-primary-darker;
+  @apply rounded bg-primary text-white text-sm font-bold whitespace-nowrap hover:bg-primary-darker focus:bg-primary-darker;
+}
+
+.btn-lg {
+  @apply px-6 py-3;
+}
+
+.btn-sm {
+  @apply px-4 py-2;
 }
 
 .btn-spinner,
