--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,13 +10,10 @@
 @import 'tailwindcss/utilities';
 
 .toggle-checkbox:checked {
-  @apply: right-0 border-green-400;
-  right: 0;
-  border-color: #68d391;
+  @apply right-0 border-red-600;
 }
 .toggle-checkbox:checked + .toggle-label {
-  @apply: bg-green-400;
-  background-color: #68d391;
+  @apply bg-red-600;
 }
 
 @layer utilities {
