--- a/resources/css/components/form.css
+++ b/resources/css/components/form.css
@@ -1,5 +1,5 @@
 .form-label {
-  @apply mb-2 block text-gray-800 select-none;
+  @apply mb-2 text-sm font-medium block text-gray-800 select-none;
 }
 
 .form-input,
