--- a/resources/css/components/button.css
+++ b/resources/css/components/button.css
@@ -2,6 +2,10 @@
   @apply rounded bg-primary text-white text-sm font-bold whitespace-nowrap hover:bg-primary-darker focus:bg-primary-darker;
 }
 
+.btn-red:disabled {
+  @apply bg-red-300 cursor-not-allowed;
+}
+
 .btn-lg {
   @apply px-6 py-3;
 }
